--- a/navbar-app/index.html
+++ b/navbar-app/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Navbar</title>
     <!-- font-awesome -->
     <link
@@ -11,14 +14,21 @@
     />
 
     <!-- styles -->
-    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="./styles.css"
+    />
   </head>
   <body>
     <nav>
       <div class="nav-center">
         <!-- nav header -->
         <div class="nav-header">
-          <img src="./logo.svg" class="logo" alt="logo" />
+          <img
+            src="./logo.svg"
+            class="logo"
+            alt="logo"
+          />
           <button class="nav-toggle">
             <i class="fas fa-bars"></i>
           </button>
@@ -69,6 +79,9 @@
       </div>
     </nav>
     <!-- javascript -->
-    <script src="./browser-app.js"></script>
+    <script
+      src="./browser-app.js"
+      type="module"
+    ></script>
   </body>
 </html>
