Form submission logout logic

--- a/methods-public/index.html
+++ b/methods-public/index.html
@@ -52,6 +52,30 @@
           submit
         </button>
       </form>
+
+      <!-- logout example -->
+
+      <form
+        action="/logout"
+        method="POST"
+      >
+        <h3>Logout example Form</h3>
+        <div class="form-row">
+          <label for="useremail">enter name</label>
+          <input
+            type="text"
+            name="useremail"
+            id="useremail"
+            autocomplete="false"
+          />
+        </div>
+        <button
+          type="submit"
+          class="block"
+        >
+          submit
+        </button>
+      </form>
     </main>
   </body>
 </html>
